zeus-svc-nodepor.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zeus-rs
  name: zeus-svc-nodeport
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30007
  selector:
    app: zeus-rs
