zeus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: zeus
spec:
  rules:
  - host: zeus.192.168.99.101.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zeus-svc-nodeport
            port: 
              number: 8201
